Project 0/force-app/main/default/objects/Mail__c/Mail__c.object-meta.xml
<CustomObject>
    <label>Mail</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>