Project 0/force-app/main/default/objects/Mail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Deliver_To__r.Address__r.Name &amp; &#39;, &#39; &amp;
Deliver_To__r.Address__r.City__c &amp; &#39;, &#39; &amp;
Deliver_To__r.Address__r.State__c &amp; &#39;, &#39;&amp;
Deliver_To__r.Address__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>