Project 0/force-app/main/default/objects/Mail__c/fields/Covered_by_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this package covered by insurance or not?</description>
    <inlineHelpText>Check the box if this package is covered by insurance.</inlineHelpText>
    <label>Covered by Insurance</label>
    <type>Checkbox</type>
</CustomField>