Project 0/force-app/main/default/objects/Mail__c/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deliver To</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>