Project 0/force-app/main/default/objects/Mail__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height of the package in inches.</description>
    <inlineHelpText>Enter the height of the item being delivered in inches. Digits leading the decimal can&#39;t be more than 16, digits following the decimal can&#39;t be more than 2.</inlineHelpText>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>