Project 0/force-app/main/default/objects/Mail__c/fields/Insurance_Payout__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payout__c</fullName>
    <description>Reimbursement value if the package is missing.</description>
    <inlineHelpText>Enter the value that the package is insured for.</inlineHelpText>
    <label>Insurance Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>