Project 0/force-app/main/default/objects/Mail__c/fields/Reimbursement_Processing__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Processing__c</fullName>
    <description>Approval processing steps for reimbursement.</description>
    <inlineHelpText>Select the processing step in which the reimbursement approval is currently at.</inlineHelpText>
    <label>Reimbursement Processing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>