Project 0/force-app/main/default/objects/Mail__c/fields/Weigth__c.field-meta.xml
<CustomField>
    <fullName>Weigth__c</fullName>
    <description>Weight of the package in pounds.</description>
    <inlineHelpText>Enter the weight of the item being delivered in pounds. Digits leading the decimal can&#39;t be more than 16, digits following the decimal can&#39;t be more than 2.</inlineHelpText>
    <label>Weigth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>