Project 0/force-app/main/default/objects/Mail__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Width of the mail being delivered.</description>
    <inlineHelpText>Enter the width of the item being delivered in inches. Digits leading the decimal can&#39;t be more than 16, digits following the decimal can&#39;t be more than 2.</inlineHelpText>
    <label>Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>